fix z-index sidebar

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -57,6 +57,7 @@ body {
   position: fixed;
   top: 47px; left: 20px;
   width: 200px;
+  z-index: -1;
 }
 
 .offcanvas-menu {
